data/derived/fa15/progs/unify/prog1457.ml.out
Characters 208-219:
  then cout :: res
       ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int * int list
